mormon.html complete

--- a/mormon.html
+++ b/mormon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Phantom</title>
+    <title>The Book of Mormon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
@@ -41,11 +41,11 @@
     </div>
 </div><!-- navbar -->
 
-<div class="myHeader jumbotron">
+<div class="jumbotron" id="mormon-header">
     <div class="container">
-        <h1>The Phantom of the Opera</h1>
-        <p>Broadway's longest running musical.</p>
-        <p><a class="btn btn-default btn-lg" role="button" href="http://www.thephantomoftheopera.com/" target="_blank">Learn more</a></p>
+        <h1>The Book of Mormon</h1>
+        <p>Winner of 9 Tonny Awards including best musical.</p>
+        <p><a class="btn btn-default btn-lg" role="button" href="http://bookofmormonbroadway.com/" target="_blank">Learn more</a></p>
     </div>
 </div>
 
@@ -53,28 +53,26 @@
     <div class="row">
         <div class="col-lg-2">
             <div class="list-group">
-                <a href="phantom.html" class="list-group-item custom-active">Synopsis</a>
+                <a href="phantom.html" class="list-group-item" id="mormon-active">Synopsis</a>
                 <a href="phantom_cast.html" class="list-group-item">Cast</a>
                 <a href="phantom_theatre.html" class="list-group-item">Theatre</a>
-                <a href="http://en.wikipedia.org/wiki/The_Phantom_of_the_Opera_(1986_musical)" class="list-group-item" target="_blank">Wiki</a>
+                <a href="http://en.wikipedia.org/wiki/The_Book_of_Mormon_(musical)" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
         <div class="col-lg-10">
             <div class="well">
                 <h2>Synopsis</h2><p>&nbsp;</p>
                 <p class="lead">
-                    Far beneath the majesty and splendour of the Paris Opera House, hides the Phantom in a shadowy existence.
-                    Shamed by his physical appearance and feared by all, the love he holds for his beautiful protegee Christine
-                    Daae is so strong that even her heart cannot resist.
-                    <img src="imgs/phantom_3.jpg" id="img-syn">
+                    The Book of Mormon tells the story of two young Mormon missionaries sent to a remote village in northern Uganda, where a
+                    brutal warlord is threatening the local population. Naive and optimistic, the two missionaries try to share the Book of Mormon,
+                    one of their scriptures-which only one of them has read-but have trouble connecting with the locals, who are more worried about war,
+                    famine, poverty, and AIDS than about religion.
+                    <img src="imgs/mormon_0.png" id="img-syn">
                 <p>
-                    The musical opened at Her Majesty's Theatre on 9 October 1986 with Michael Crawford and Sarah Brightman in the leading roles,
-                    and there have been dozens of productions worldwide since then. Now in its 26th record-breaking year, The Phantom of the
-                    Opera continues to captivate audiences at Her Majesty's Theatre in London's West End, after more than 10,000 performances.
-                </p>
-                <p>
-                    Andrew Lloyd Webber's mesmerising score along with jaw-dropping scenery and breathtaking special effects, magically combine
-                    to bring this tragic love story to life each night.
+                    After nearly seven years of development, the show opened on Broadway in March 2011. The Book of Mormon has garnered overwhelmingly positive
+                    critical response and numerous theatre awards including nine Tony Awards, one of which was for Best Musical, and the Grammy Award for Best
+                    Musical Theater Album. An original Broadway cast recording was released in May 2011 and became the highest-charting Broadway cast album in over
+                    four decades, reaching No. 3 on the Billboard charts.
                 </p><p>&nbsp;</p>
             </div>
         </div>
