--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
 <!-- navbar
 =============================================== -->
-<div id="navbarDiv" class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbarDiv" class="navbar navbar-home navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,7 +35,7 @@
                         <li><a href="lion.html">The Lion King</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Author</a></li>
+                <li><a href="author.html">Author</a></li>
             </ul>
 
         </div>
@@ -48,7 +48,7 @@
         <h1>BootStrap Project</h1>
         <p>This is a course project of Web Development and Programming.<br/>
             xHTML, CSS and Frameworks: Twitter Bootstrap</p>
-        <p><a class="btn btn-primary btn-lg" role="button" target="_blank"
+        <p><a class="btn btn-default btn-lg" role="button" target="_blank"
               href="http://cs.nyu.edu/courses/spring14/CSCI-UA.0061-001/webDev_index_sp14.php">Course site</a></p>
     </div><!-- jumbotron -->
 
@@ -101,6 +101,6 @@
 </div><!-- container -->
 
 <script src="https://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
