--- a/broadway_shows.html
+++ b/broadway_shows.html
@@ -3,14 +3,14 @@
 <head>
     <title>Broadway Shows</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
 <!-- navbar
 =============================================== -->
-<div id="navbarDiv" class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbarDiv" class="navbar navbar-home navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,7 +35,7 @@
                         <li><a href="lion.html">The Lion King</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Author</a></li>
+                <li><a href="author.html">Author</a></li>
             </ul>
 
         </div>
@@ -96,9 +96,6 @@
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
 
 <!-- Marketing messaging and featurettes
 ================================================== -->
@@ -114,7 +111,7 @@
                 It won the 1986 Olivier Award and the 1988 Tony Award for Best Musical, and Michael Crawford
                 won the Olivier and Tony Awards for Best Actor in a Musical. It is the longest running show in Broadway history
                 by a wide margin, and celebrated its 10,000th Broadway performance on 11 February 2012, the first production ever to do so.</p></div>
-            <p><a class="btn btn-info" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-info" href="phantom.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="imgs/lionKing_logo.jpeg" alt="Generic placeholder image">
@@ -123,7 +120,7 @@
                 music by Elton John and lyrics by Tim Rice along with the musical score created by Hans Zimmer
                 with choral by Lebo M. Directed by Julie Taymor, the musical features actors in animal
                 costumes as well as giant, hollow puppets. The show is produced by Disney Theatrical.</p></div>
-            <p><a class="btn btn-info" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-info" href="lion.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="imgs/mormon_logo.jpg" alt="Generic placeholder image">
@@ -133,7 +130,7 @@
                 The Book of Mormon has garnered overwhelmingly positive critical response and numerous
                 theatre awards including nine Tony Awards, one of which was for Best Musical, and the
                 Grammy Award for Best Musical Theater Album. </p></div>
-            <p><a class="btn btn-info" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-info" href="mormon.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -147,6 +144,6 @@
     </div>
 </div><!-- container -->
 <script src="https://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
