--- a/mormon.html
+++ b/mormon.html
@@ -9,7 +9,7 @@
 <body>
 <!-- navbar
 =============================================== -->
-<div id="navbarDiv" class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbarDiv" class="navbar navbar-shows navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,7 +34,7 @@
                         <li><a href="lion.html">The Lion King</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Author</a></li>
+                <li><a href="author.html">Author</a></li>
             </ul>
 
         </div>
@@ -54,8 +54,8 @@
         <div class="col-lg-2">
             <div class="list-group">
                 <a href="phantom.html" class="list-group-item" id="mormon-active">Synopsis</a>
-                <a href="phantom_cast.html" class="list-group-item">Cast</a>
-                <a href="phantom_theatre.html" class="list-group-item">Theatre</a>
+                <a href="http://bookofmormonbroadway.com/show_cast.php" target="_blank" class="list-group-item">Cast</a>
+                <a href="http://bookofmormonbroadway.com/photos.php" target="_blank" class="list-group-item">Gallary</a>
                 <a href="http://en.wikipedia.org/wiki/The_Book_of_Mormon_(musical)" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
