--- a/lion.html
+++ b/lion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lion King </title>
+    <title>The Lion King </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
@@ -9,7 +9,7 @@
 <body>
 <!-- navbar
 =============================================== -->
-<div id="navbarDiv" class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbarDiv" class="navbar navbar-shows navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,7 +34,7 @@
                         <li><a href="lion.html">The Lion King</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Author</a></li>
+                <li><a href="author.html">Author</a></li>
             </ul>
 
         </div>
@@ -55,7 +55,7 @@
             <div class="list-group">
                 <a href="lion.html" class="list-group-item" id="lion-active">About the show</a>
                 <a href="http://www.lionking.com/cast" target="_blank" class="list-group-item">Cast</a>
-                <a href="lion_theatre.html" class="list-group-item">Theatre</a>
+                <a href="lion_gallary.html" class="list-group-item">Gallary</a>
                 <a href="http://en.wikipedia.org/wiki/The_Lion_King_(musical)#Synopsis" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
