--- a/phantom.html
+++ b/phantom.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Phantom</title>
+    <title>The Phantom of the Opera</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
 <!-- navbar
 =============================================== -->
-<div id="navbarDiv" class="navbar navbar-default navbar-static-top" role="navigation">
+<div id="navbarDiv" class="navbar navbar-shows navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,7 +34,7 @@
                         <li><a href="lion.html">The Lion King</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Author</a></li>
+                <li><a href="author.html">Author</a></li>
             </ul>
 
         </div>
@@ -91,6 +91,6 @@
 </div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
