create .gitignore to untrack .DS_Store and .idea

--- a/broadway_shows.html
+++ b/broadway_shows.html
@@ -104,7 +104,7 @@
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <img class="img-circle" src="imgs/phantom_logo.jpg" alt="Generic placeholder image">
             <h3>The Phantom of the Opera</h3>
             <div class="text-col"><p>The musical opened on Broadway in 1988.
@@ -113,7 +113,7 @@
                 by a wide margin, and celebrated its 10,000th Broadway performance on 11 February 2012, the first production ever to do so.</p></div>
             <p><a class="btn btn-info" href="phantom.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <img class="img-circle" src="imgs/lionKing_logo.jpeg" alt="Generic placeholder image">
             <h3>The Lion King</h3>
             <div class="text-col"><p>The Lion King is a musical based on the 1994 Disney animated film of the same name with
@@ -122,7 +122,7 @@
                 costumes as well as giant, hollow puppets. The show is produced by Disney Theatrical.</p></div>
             <p><a class="btn btn-info" href="lion.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <img class="img-circle" src="imgs/mormon_logo.jpg" alt="Generic placeholder image">
             <h3>The Book of Mormon</h3>
             <div class="text-col"><p>The Book of Mormon is a religious satire musical. After nearly seven years of development,
@@ -140,7 +140,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div><!-- container -->
 <script src="https://code.jquery.com/jquery.js"></script>
