--- a/lion.html
+++ b/lion.html
@@ -51,15 +51,15 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="lion.html" class="list-group-item" id="lion-active">About the show</a>
                 <a href="http://www.lionking.com/cast" target="_blank" class="list-group-item">Cast</a>
-                <a href="lion_gallary.html" class="list-group-item">Gallary</a>
+                <a href="#" class="list-group-item">Gallary</a>
                 <a href="http://en.wikipedia.org/wiki/The_Lion_King_(musical)#Synopsis" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
                 <h2>About the show</h2><p>&nbsp;</p>
                 <iframe width="840" height="480"
@@ -84,7 +84,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div>
 
