--- a/phantom.html
+++ b/phantom.html
@@ -51,7 +51,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="phantom.html" class="list-group-item custom-active">Synopsis</a>
                 <a href="phantom_cast.html" class="list-group-item">Cast</a>
@@ -59,7 +59,7 @@
                 <a href="http://en.wikipedia.org/wiki/The_Phantom_of_the_Opera_(1986_musical)" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
                 <h2>Synopsis</h2><p>&nbsp;</p>
                 <p class="lead">
@@ -86,7 +86,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div>
 
