--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div><!-- container -->
 
