--- a/lion_gallary.html
+++ b/lion_gallary.html
@@ -51,7 +51,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="lion.html" class="list-group-item">About the show</a>
                 <a href="http://www.lionking.com/cast" target="_blank" class="list-group-item">Cast</a>
@@ -59,7 +59,7 @@
                 <a href="http://en.wikipedia.org/wiki/The_Lion_King_(musical)#Synopsis" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
 
         </div>
@@ -71,8 +71,9 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
