--- a/mormon.html
+++ b/mormon.html
@@ -51,7 +51,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="phantom.html" class="list-group-item" id="mormon-active">Synopsis</a>
                 <a href="http://bookofmormonbroadway.com/show_cast.php" target="_blank" class="list-group-item">Cast</a>
@@ -59,7 +59,7 @@
                 <a href="http://en.wikipedia.org/wiki/The_Book_of_Mormon_(musical)" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
                 <h2>Synopsis</h2><p>&nbsp;</p>
                 <p class="lead">
@@ -84,7 +84,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div>
 
