--- a/phantom_cast.html
+++ b/phantom_cast.html
@@ -51,7 +51,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="phantom.html" class="list-group-item">Synopsis</a>
                 <a href="phantom_cast.html" class="list-group-item custom-active">Cast</a>
@@ -60,7 +60,7 @@
 
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
                 <h2>New York Cast</h2><p>&nbsp;</p>
                 <table class="table table-hover lead">
@@ -82,7 +82,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div>
 
