--- a/phantom_theatre.html
+++ b/phantom_theatre.html
@@ -51,7 +51,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-md-2">
             <div class="list-group">
                 <a href="phantom.html" class="list-group-item">Synopsis</a>
                 <a href="phantom_cast.html" class="list-group-item">Cast</a>
@@ -59,7 +59,7 @@
                 <a href="http://en.wikipedia.org/wiki/The_Phantom_of_the_Opera_(1986_musical)" class="list-group-item" target="_blank">Wiki</a>
             </div>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-10">
             <div class="well">
             <p class="lead">Majestic Theatre</p>
             <p>247 West 44th Street<br/>New York, USA</p>
@@ -74,7 +74,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <hr/>
-        <p>&copy; LittleRockJ 2014</p>
+        <p>&copy; Jiaying Yu 2014</p>
     </div>
 </div>
 
